<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
    <groupId>org.jenkins-ci.plugins</groupId>
    <artifactId>plugin</artifactId>
    <version>2.11</version>
    <relativePath/>
  </parent>
  
  <groupId>com.qualys.plugins</groupId>
  <artifactId>qualys-vm</artifactId>
  <version>1.1.0-SNAPSHOT</version>
  <packaging>hpi</packaging>

  <properties>   
    <jenkins.version>2.7.3</jenkins.version>
    <java.version>1.8</java.version>
    <java.level>8</java.level>    
  </properties>
  
  <build>
  	<finalName>${project.artifactId}_${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>			
        </configuration>
      </plugin>
      
      <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>findbugs-maven-plugin</artifactId>
          <version>3.0.4</version>
          <configuration>
            <failOnError>${maven.findbugs.failure.strict}</failOnError>
          </configuration>
        </plugin>
   
      <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>animal-sniffer-maven-plugin</artifactId>
      <configuration>
        <skip>true</skip>
      </configuration>
    </plugin>
    
    <plugin>
	     <groupId>com.github.spotbugs</groupId>
	     <artifactId>spotbugs-maven-plugin</artifactId>
	     <version>4.1.4</version>
	     <configuration>
	         <effort>Max</effort>
	         <threshold>Low</threshold>
	         <xmlOutput>true</xmlOutput>
	     </configuration>
       <executions>
         <execution>
           <goals>
             <goal>check</goal>
           </goals>
         </execution>
       </executions>
     </plugin>
    </plugins>
  </build>

  <name>Qualys Host Scanning Connector</name>
  <description>Provides a post-deploy step to run a vulnerability scan using the Qualys Vulnerability Management service.</description>
  <url>https://github.com/jenkinsci/qualys-vm-plugin</url>

  <licenses>
    <license>
      <name>GNU General Public License v3.0</name>
      	<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
    </license>
  </licenses>

  <repositories>
    <repository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
    </repository>
  </repositories>
  
  <pluginRepositories>
    <pluginRepository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
    </pluginRepository>
  </pluginRepositories>
  
  <dependencies>
	  <dependency>
	    <groupId>org.jenkins-ci.plugins.workflow</groupId>
	    <artifactId>workflow-step-api</artifactId>
	    <version>2.7</version>
	  </dependency>
	  <dependency>
	  	<groupId>org.jibx</groupId>
	  	<artifactId>jibx-bind</artifactId>
	  	<version>1.3.1</version>
	  </dependency>
	  <dependency>
		<groupId>org.apache.httpcomponents</groupId>
		<artifactId>httpclient</artifactId>
		<version>4.3.6</version>
	  </dependency>

	  <dependency>
	      <groupId>org.jenkins-ci.plugins</groupId>
	      <artifactId>credentials</artifactId>
	      <version>2.1.10</version>
	      <optional>true</optional>
	  </dependency>
	
	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
	<dependency>
	    <groupId>com.google.code.gson</groupId>
	    <artifactId>gson</artifactId>
	    <version>2.8.5</version>
	</dependency>
	<dependency>
	  <groupId>org.json</groupId>
	  <artifactId>json</artifactId>
	  <version>20171018</version>
	</dependency>
	<dependency>
		  <groupId>org.apache.maven</groupId>
		  <artifactId>maven-model</artifactId>
		  <version>3.6.1</version>
	  </dependency>
	  
  </dependencies>

  <scm>
       <connection>scm:git:ssh://github.com/jenkinsci/qualys-vm-plugin.git</connection>
       <developerConnection>scm:git:ssh://git@github.com/jenkinsci/qualys-vm-plugin.git</developerConnection>
       <url>https://github.com/jenkinsci/qualys-vm-plugin</url>
    <tag>HEAD</tag>
  </scm>

  <organization>
  	<name>Qualys Inc.</name>
  	<url>https://www.qualys.com/</url>
  </organization>
  <developers>
       <developer>
               <id>Qualys</id>
               <name>Qualys Inc.</name>
               <email>plugins@qualys.com</email>
       </developer>
  </developers>
</project>
